adjust footer html

--- a/_config.yml
+++ b/_config.yml
@@ -19,13 +19,15 @@ comment:
 
 # Social
 social:
-    weibo: 13272374945 
+    # weibo: 13272374945 
+    wechat: Kieren
+    cnblogs: littlefivebolg
     github: Little-Five
     # zhihu: panpanleopard
     # juejin: xxx
-    jianshu: 2ada30d8d0f7
+    # jianshu: 2ada30d8d0f7
     # twitter: 
-    mail: leopardpan@icloud.com
+    mail: little_five_blogs@163.com
 
 
 # 百度统计 
